[gd_scene load_steps=4 format=3 uid="uid://q42tn6ne8vk"]

[ext_resource type="Script" uid="uid://bj3kpcqwhxcr4" path="res://Scenes/relics_handler/relic_tool_tip_pop_up.gd" id="1_dlfqo"]
[ext_resource type="Texture2D" uid="uid://cf6j4g1bkxnn5" path="res://art/1bit/shovel knight shovel.png" id="2_fujly"]
[ext_resource type="FontFile" uid="uid://bjuo1v8slm0rd" path="res://art/mago3.ttf" id="3_enswr"]

[node name="RelicToolTip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dlfqo")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.603922)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -26.0
offset_right = 75.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="RelicIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_fujly")
stretch_mode = 5

[node name="RelicToolTip" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("3_enswr")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Relic Description Relic Description Relic Description Relic Description Relic Description Relic Description Relic Description "
fit_content = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
